[FIX] Fix header layout with new class for align-items

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,14 @@
 /* Layout classes */
 header {
     background-color: #FF6800;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
 }
 
+main {
+    padding-top: 70px;
+}
 
 .row {
     display: flex;
@@ -16,13 +22,10 @@ header {
     width: 1200px;
     margin: 0 auto;
     padding: 15px;
-    justify-content: center;
-    align-items: center;
 }
 
 .col-25 {
     width: 25%;
-    align-items: center;
 }
 
 .col-50 {
@@ -80,6 +83,8 @@ li {
 
 .text-right {
     text-align: right;
+    justify-content: flex-end;
+
 }
 
 .white-font {
@@ -155,4 +160,9 @@ footer {
 
 h3 {
     margin-bottom: 10px;
+}
+
+.align-center {
+    display: flex;
+    align-items: center;
 }
